--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -1,8 +1,8 @@
-APP=./app
+SAPP=./app
 all:
-	gcc main.c -o app
-	gcc unit.c -o tester
+    gcc main.c -o app
+    gcc unit.c -o tester
 tests:
-	./tester $(APP)
+    ./tester $(APP)
 clean:
-	rm tester app
+    rm tester app
